# cmd/main.go
@@ -2,18 +2,27 @@ package main
 
 import (
 	"log"
+	"net/http"
 	"os"
 
 	"github.com/SawitProRecruitment/UserService/generated"
 	"github.com/SawitProRecruitment/UserService/handler"
 	"github.com/SawitProRecruitment/UserService/repository"
+	"github.com/golang-jwt/jwt"
+
 	"github.com/joho/godotenv"
 
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 )
 
 func main() {
+
 	e := echo.New()
+
+	e.Use(middleware.Logger())
+	e.Use(middleware.Recover())
+	// e.Use(verifyToken)
 
 	var server generated.ServerInterface = newServer()
 
@@ -36,4 +45,47 @@ func newServer() *handler.Server {
 		Repository: repo,
 	}
 	return handler.NewServer(opts)
+}
+
+func verifyToken(next echo.HandlerFunc) echo.HandlerFunc {
+	return func(ctx echo.Context) error {
+		publicKey := handler.LoadPublicKey()
+
+		tokenString := ctx.Request().Header.Get("Authorization")
+		if tokenString == "" {
+			return ctx.JSON(http.StatusUnauthorized, generated.Message{
+				Status:  false,
+				Message: "Missing token",
+			})
+		}
+
+		token, err := jwt.ParseWithClaims(tokenString, &handler.Claims{}, func(token *jwt.Token) (interface{}, error) {
+			return publicKey, nil
+		})
+
+		if err != nil {
+			return ctx.JSON(http.StatusUnauthorized, generated.Message{
+				Status:  false,
+				Message: "Invalid token",
+			})
+		}
+
+		if !token.Valid {
+			return ctx.JSON(http.StatusUnauthorized, generated.Message{
+				Status:  false,
+				Message: "Invalid token",
+			})
+		}
+
+		claims, ok := token.Claims.(*handler.Claims)
+		if !ok {
+			return ctx.JSON(http.StatusUnauthorized, generated.Message{
+				Status:  false,
+				Message: "Invalid token claims",
+			})
+		}
+
+		ctx.Set("phone", claims.Phone)
+		return next(ctx)
+	}
 }
